changed final code

--- a/final/app.css
+++ b/final/app.css
@@ -1,6 +1,6 @@
 #main-card {
-    margin-top: 300px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-top: 30vh;
+    margin-left: 20vw;
+    margin-right: 20vw;
     border: 1px solid lightgray;
 }
